<resources>
    <string name="app_name">雑談掲示板</string>

    <string name="main_tab_home">Home</string>
    <string name="main_tab_mypage">MyPage</string>
    <string name="main_menu_notification">Notification</string>

    <string name="select_category_title">カテゴリ選択</string>
    <string name="select_category_description">作成するスレッドの\nカテゴリを選択してください</string>

    <string name="create_thread_title">スレッド投稿</string>
    <string name="create_thread_item_category">カテゴリ</string>
    <string name="create_thread_item_title">タイトル</string>
    <string name="create_thread_item_description">本文</string>
    <string name="create_thread_btn_post">投稿</string>
    <string name="create_thread_confirm_dialog_title">確認</string>
    <string name="create_thread_confirm_dialog_description">この内容でスレッドを作成します。よろしいでしょうか？</string>
    <string name="create_thread_complete_toast">投稿しました</string>

    <string name="create_comment_title">コメント投稿</string>
    <string name="create_comment_item_user_name">投稿者名</string>
    <string name="create_comment_item_description">コメント内容</string>
    <string name="create_comment_btn_post">投稿</string>
    <string name="create_comment_confirm_dialog_title">確認</string>
    <string name="create_comment_confirm_dialog_description">この内容でコメントを投稿します。よろしいでしょうか？</string>
    <string name="create_comment_complete_toast">投稿しました</string>

    <string name="notification_list_title">通知</string>

    <string name="error_view_btn_reload">再読込み</string>
</resources>
