<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.u1fukui.bbs.ui.creation.comment.CreateCommentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/BaseToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/create_comment_title" />

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/InputAreaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_comment_item_user_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@={viewModel.user.name}"
                    android:textSize="16dp"
                    tools:text="たろう" />

                <TextView
                    style="@style/InputAreaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_comment_item_description" />

                <EditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="top"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="@{viewModel.MAX_DESCRIPTION_LENGTH}"
                    android:onTextChanged="@{viewModel::onDescriptionTextChanged}"
                    android:text="@={viewModel.description}"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/post_button"
                    android:enabled="@{viewModel.postButtonEnabled}"
                    android:onClick="@{viewModel::onClickPostButton}"
                    android:padding="4dp"
                    android:text="@string/create_comment_btn_post"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loadingVisibility}" />
    </RelativeLayout>

</layout>