<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="bindingModel"
            type="com.u1fukui.bbs.ui.creation.thread.InputThreadInfoBindingModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/InputAreaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_thread_item_category" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{bindingModel.category.name}"
                    android:textColor="@color/black"
                    android:textSize="16dp" />

                <TextView
                    style="@style/InputAreaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_thread_item_title" />

                <EditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:imeOptions="actionNext"
                    android:maxLength="@{bindingModel.MAX_TITLE_LENGTH}"
                    android:maxLines="1"
                    android:onTextChanged="@{bindingModel::onTitleTextChanged}"
                    android:singleLine="true"
                    android:text="@={bindingModel.title}"
                    android:textSize="16dp" />

                <TextView
                    style="@style/InputAreaTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/create_thread_item_description" />

                <EditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="top"
                    android:lineSpacingMultiplier="1.2"
                    android:maxLength="@{bindingModel.MAX_DESCRIPTION_LENGTH}"
                    android:onTextChanged="@{bindingModel::onDescriptionTextChanged}"
                    android:text="@={bindingModel.description}"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/post_button"
                    android:enabled="@{bindingModel.postButtonEnabled}"
                    android:onClick="@{bindingModel::onClickPostButton}"
                    android:padding="4dp"
                    android:text="@string/create_thread_btn_post"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{bindingModel.loadingVisibility}" />
    </RelativeLayout>

</layout>